--- a/brush-shell/tests/cases/builtins/command.yaml
+++ b/brush-shell/tests/cases/builtins/command.yaml
@@ -20,12 +20,25 @@ cases:
 
   - name: "command -v"
     stdin: |
-      command -v echo
-      command -v cat
-      command -v $(command -v cat)
+      echo "PATH: $PATH"
 
+      echo "[echo]"
+      command -v echo
+
+      echo "[non-existent]"
       command -v non-existent || echo "1. Not found"
+
+      echo "[/usr/bin/non-existent]"
       command -v /usr/bin/non-existent || echo "2. Not found"
+
+  - name: "command -v with full paths"
+    skip: true # TODO: investigate why this fails on arch linux
+    stdin: |
+      echo "[cat]"
+      command -v cat
+
+      echo "[\$(command -v cat)]"
+      command -v $(command -v cat)
 
   - name: "command -V"
     ignore_stderr: true
