--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,3 +45,7 @@ strip = "debuginfo"
 opt-level = "z"
 lto = true
 codegen-units = 1
+
+[profile.dev.package]
+insta.opt-level = 3
+similar.opt-level = 3
