--- a/brush-parser/Cargo.toml
+++ b/brush-parser/Cargo.toml
@@ -30,7 +30,10 @@ utf8-chars = "3.0.5"
 anyhow = "1.0.92"
 assert_matches = "1.5.0"
 criterion = { version = "0.5.1", features = ["html_reports"] }
+expect-test = "1.5.0"
 pretty_assertions = { version = "1.4.1", features = ["unstable"] }
+serde = { version = "1.0.214", features = ["derive"] }
+serde_yaml = "0.9.34"
 
 [target.'cfg(unix)'.dev-dependencies]
 pprof = { version = "0.13.0", features = ["criterion", "flamegraph"] }
