fix: correct parsing of parens in arithmetic command

--- a/brush-shell/tests/cases/compound_cmds/arithmetic.yaml
+++ b/brush-shell/tests/cases/compound_cmds/arithmetic.yaml
@@ -9,3 +9,8 @@ cases:
     stdin: |
       (( (0) )) && echo "0"
       (( (1) )) && echo "1"
+
+  - name: "Arithmetic statements with parens and operators"
+    stdin: |
+      (( (0) == 0 )) && echo "0 == 0"
+      (( (1) != 0 )) && echo "1 != 0"
