--- a/deny.toml
+++ b/deny.toml
@@ -35,14 +35,7 @@ version = 2
 # List of explicitly allowed licenses
 # See https://spdx.org/licenses/ for list of possible licenses
 # [possible values: any SPDX 3.11 short identifier (+ optional exception)].
-allow = [
-    "Apache-2.0",
-    "BSD-2-Clause",
-    "BSL-1.0",
-    "MIT",
-    "Unicode-DFS-2016",
-    "Zlib",
-]
+allow = ["Apache-2.0", "BSD-2-Clause", "BSL-1.0", "MIT", "Unicode-3.0", "Zlib"]
 # The confidence threshold for detecting a license from license text.
 # The higher the value, the more closely the license text must be to the
 # canonical license text of a valid SPDX license file.
@@ -84,7 +77,11 @@ deny = []
 #exact = true
 
 # Certain crates/versions that will be skipped when doing duplicate detection.
-skip = [{ crate = "nu-ansi-term" }, { crate = "itertools" }, { crate = "hashbrown" }]
+skip = [
+    { crate = "nu-ansi-term" },
+    { crate = "itertools" },
+    { crate = "hashbrown" },
+]
 skip-tree = [
     { crate = "thiserror", reason = "Multiple crates use different versions" },
     { crate = "windows-sys", reason = "several crates use outdated versions" },
