fix: stop incorrectly parsing assignment as function def

--- a/brush-shell/tests/cases/arrays.yaml
+++ b/brush-shell/tests/cases/arrays.yaml
@@ -284,3 +284,16 @@ cases:
       ourarray+=("${otherarray[@]/a/x}")
       declare -p otherarray
       declare -p ourarray
+
+  - name: "Array declaration in a function"
+    stdin: |
+      outer() {
+        inner=()
+        if test true; then
+          echo true
+        else
+          echo false
+        fi
+      }
+
+      outer
