fix(command): handle sending basic command errors to redirected stderr

--- a/brush-shell/tests/cases/simple_commands.yaml
+++ b/brush-shell/tests/cases/simple_commands.yaml
@@ -20,3 +20,8 @@ cases:
     stdin: |
       ./non-existent-command
       echo "Result: $?"
+
+  - name: "Redirection of errors"
+    stdin: |
+      ./non-existent-command 2>/dev/null
+      echo "Result: $?"
