--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,7 +30,7 @@ jobs:
       matrix:
         include:
           # Build for x86_64/linux target on native host.
-          - host: "ubuntu-latest"
+          - host: "ubuntu-24.04"
             target: ""
             os: "linux"
             arch: "x86_64"
@@ -45,7 +45,7 @@ jobs:
             binary_name: "brush"
             extra_build_args: ""
           # Build for aarch64/linux target on x86_64/linux host.
-          - host: "ubuntu-latest"
+          - host: "ubuntu-24.04"
             target: "aarch64-unknown-linux-gnu"
             os: "linux"
             arch: "aarch64"
@@ -53,7 +53,7 @@ jobs:
             binary_name: "brush"
             extra_build_args: ""
           # Build for WASI-0.2 target on x86_64/linux host.
-          - host: "ubuntu-latest"
+          - host: "ubuntu-24.04"
             target: "wasm32-wasip2"
             os: "wasi-0.2"
             arch: "wasm32"
@@ -61,7 +61,7 @@ jobs:
             binary_name: "brush.wasm"
             extra_build_args: "--no-default-features --features minimal"
           # Build for x86_64/windows target on x86_64/linux host.
-          - host: "ubuntu-latest"
+          - host: "ubuntu-24.04"
             target: "x86_64-pc-windows-gnu"
             os: "windows"
             arch: "x86_64"
@@ -125,7 +125,7 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - host: "ubuntu-latest"
+          - host: "ubuntu-24.04"
             variant: "linux"
             artifact_suffix: ""
             name_suffix: "(linux)"
@@ -241,7 +241,7 @@ jobs:
   # Static analysis of the code.
   check:
     name: "Source code checks"
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
 
     strategy:
       matrix:
@@ -285,7 +285,7 @@ jobs:
   # Check for unneeded dependencies.
   check-deps:
     name: "Check for unneeded dependencies"
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -307,7 +307,7 @@ jobs:
   benchmark:
     if: github.event_name == 'pull_request'
     name: "Benchmarks"
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -371,7 +371,7 @@ jobs:
             prereqs_command: "pacman -Sy --noconfirm bash-completion iputils grep less sed util-linux"
 
     name: "OS target tests (${{ matrix.description }})"
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     container: ${{ matrix.container }}
     needs: build
     steps:
