chore: upgrade more workflows

--- a/.github/workflows/devcontainer.yaml
+++ b/.github/workflows/devcontainer.yaml
@@ -10,7 +10,7 @@ on:
 jobs:
   build:
     name: "Build devcontainer"
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     permissions:
       contents: read
       packages: read
@@ -35,7 +35,7 @@ jobs:
 
   build_and_publish:
     name: "Build and publish devcontainer"
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     permissions:
       contents: read
       packages: write
