--- a/brush-core/Cargo.toml
+++ b/brush-core/Cargo.toml
@@ -22,6 +22,7 @@ async-trait = "0.1.83"
 brush-parser = { version = "^0.2.11", path = "../brush-parser" }
 cached = "0.54.0"
 cfg-if = "1.0.0"
+chrono = "0.4.39"
 clap = { version = "4.5.21", features = ["derive", "wrap_help"] }
 fancy-regex = "0.14.0"
 futures = "0.3.31"
